Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.2b1
  Bugs fixed
    - [ 2600 ] subprocess doesn't have _args_from_interpreter_flags (blocks support for multiprocessing)
    - [ 2602 ] NumberFormatException in terminal on OSX 10.12.5 (ncurses related)

  New Features
    - Updated JLine to 2.14.5

Jython 2.7.1
  same as 2.7.1rc3

Jython 2.7.1rc3
  Bugs fixed
    - [ 2597 ] PySystemState.sysClosers requires cleanup to prevent memory leak
    - [ 2593 ] file.write(obj) raises NullPointerException on type error
    - [ 2592 ] Line breaks in exceptions are wrong (characters being backslash-escaped)

Jython 2.7.1rc2
  Bugs fixed
    - [ 2536 ] deadlocks in regrtests due to StackOverflowError in finally block (workaround, still open)
    - [ 2356 ] java.lang.IllegalArgumentException on startup on Windows if username not ASCII
    - [ 1839 ] sys.getfilesystemencoding() is None (now utf-8)
    - [ 2579 ] Pyc files are not loading for too large modules if path contains __pyclasspath__
    - [ 2570 ] Wrong shebang set for OS X installation of Jython
    - [ 2585 ] test_ssl failure due to Netty exception mapping
    - [ 2313 ] test_jython_initializer failure on Windows
    - [ 2399 ] test_sort failure on Java 8
    - [ 2309 ] test_classpathimporter fails on Windows.
    - [ 2318 ] test_zipimport_jy failure on Windows
    - [ 2571 ] Error handling in test_codecencodings_tw fails on Java 8
    - [ 2568 ] test_threading intermittent failure
    - [ 2559 ] test_marshal fails
    - [ 2564 ] test_socket_jy fails on Linux
    - [ 2524 ] datetime <-> time conversion incorrect in non UTC times
    - [ 2504 ] datetime.date.__tojava__ returns incorrect dates in non-UTC timezones with
               negative offset (Jython 2.7.0)
    - [ 2500 ] Loading default cacerts on client socket when specifying a default java truststore
               unnecessarily searches for more cacerts in the same dir